matrix-k8s/public_template/deploy-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: APP_NAME-db
  namespace: b1
spec:
  type: ExternalName
  externalName: 127.0.0.1
  ports:
  - port: 80
